2004-09-24  Adam Fedor  <fedor@gnu.org>

	* Documentation/GNUmakefile.postamble: Clean up files properly
	* Source/DocMakefile: Fix up for moved files
	* Documentation/Gui/Gui.gsdoc,
	Documentation/GuiAdditions/GuiAdditions.gsdoc: Move up one level.

2004-09-24  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSControl.h
	Added new MacOSX delegate methods.
	* Source/NSControl.m (-validateEditing, -currentEditor,
	-abortEditing, -calcSize): Implemented these methods.
	(-mouseDown:): Use method to check if mouse is inside cell.

2004-09-24  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenuView.m (-setMenu:): Only call update when the new
	menu is not nil.
	* Source/NSMenu.m (-setMenuRepresentation:): Unset the menu of the
	old view. 
	(-dealloc): Unset the menu of the view. 
	(-initWithTitle:): Use setMenuRepresentation: to set the view.
	
004-09-24  Adam Fedor  <fedor@gnu.org>

	* Version 0.9.4

	* Documentation/General/OpenStepCompliance.gsdoc: Updates
	* Documentation/ReleaseNotes.gsdoc, Documentation/news.texi: Idem.

2004-09-24  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSView.m (-initWithCoder:): Added keyed decoding of
	 "hidden" flag.	
	* Source/NSCell.m (-initWithCoder:): Added the first bit of
	keyed flags decoding. Values provided by Adrian Robert
	<arobert@cogsci.ucsd.edu>. 	 
	
2004-09-23 22:33  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSTableView.m (-mouseDown:): Fix the check that detects
	when an unselected row is being dragged.

2004-09-23 18:01  Alexander Malmberg <alexander@malmberg.org>

	* Printing/GSLPR/GSLPRPrintOperation.m (-createContext): Always use
	the path from the info dictionary if it's set.

2004-09-21 23:57  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSCursor.m (_getStandardCursor): Rename to
	getStandardCursor and make static and non-inlined. Update callers.
	* Source/NSTableView.m (computePeriod): Make static.

2004-09-21 18:53  Alexander Malmberg <alexander@malmberg.org>
